Fix layout bug on firefox.

--- a/site/public/sass/components/_tables.scss
+++ b/site/public/sass/components/_tables.scss
@@ -21,7 +21,6 @@ th {
 
 .rating-list {
     clear: both;
-    display: table;
     height: 25px;
 
 	&:after {
