--- a/site/public/style.css
+++ b/site/public/style.css
@@ -110,7 +110,6 @@ th {
 
 .rating-list {
   clear: both;
-  display: table;
   height: 25px; }
   .rating-list:after {
     content: '';
